# handy-dataset

./: .gitignore  LICENSE  README.md  dataset.py  image_list.txt  main.py  pyproject.toml  utils.py
utilities/: file-sum.sh  get-frames.sh  init-choices.sh  move-photos.sh
