[project]
name = "handy-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "mediapipe>=0.10.21",
    "pandas>=2.2.3",
    "pyqt6>=6.9.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
